# tpp-mlir

./: .clang-tidy  .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  README.md  requirements.md  requirements.txt  requirements.yml
benchmarks/simple_copy/: CMakeLists.txt  run-simple-copy.sh  run.sh  simple_copy.c  simple_copy.cc  simple_copy.cpp  simple_copy_driver.c  simple_copy_kernel.mlir
include/Standalone/: .TransformUtils.h.swp  CMakeLists.txt  HeatMap.h  MathxDialect.h  MathxDialect.td  MathxOps.h  MathxOps.td  Passes.h  Passes.td  StandaloneBase.td  StandaloneDialect.h  StandaloneDialect.td  StandaloneOps.h  StandaloneOps.td  StdxOps.h  StdxOps.td  TppDialect.h  TppOps.h  TppOps.td  TppPasses.h  TppPasses.td  TppUtils.h  TransformUtils.h  Transforms.h
include/TPP/: BuilderUtils.h  Bundles.h  Bundles.td  CMakeLists.txt  MatcherUtils.h  PassBundles.h  PassBundles.td  PassUtils.h  Passes.h  Passes.td  TensorInit.h  TensorInitFloat.h  TensorInitInt.h  TransformUtils.h  Transforms.h  VNNIUtils.h  ValueUtils.h
lib/Standalone/: .MapToBatchReduceGEMM.cpp.swp  Bufferization.cpp  CMakeLists.txt  CollapseDimsAtPos.cpp  ConvertLinalgToTpp.cpp  ConvertTppToLoops.cpp  ConvertTppToVector.cpp  ConvertTppToXsmm.cpp  ConvertXsmmToFunc.cpp  CopyRemoval.cpp  DecomposeConvToMatmul.cpp  DecomposeConvToMatmulOrBrgemm.cpp  DecomposeConvsToMatmulOrBrgemm.cpp  ExperimentOnBatchReduceGemm.cpp  FuseSequentialLoops.cpp  HeatMapImpl.cpp  IteratorCollapsing.cpp  LinalgConvertToTpp.cpp  LinalgMapToTpp.cpp  LinalgXToLoops.cpp  MainClosure.cpp  MapConv2DNhwcHwcfToMatmul.cpp  MapConvToMatmul.cpp  MapMatmulToBRGemm.cpp  MapToBatchReduceGEMM.cpp  MathxDialect.cpp  MathxOps.cpp  PadSIMDDimMatmul.cpp  PreBufferization.cpp  RelayoutElimination.cpp  StandaloneDialect.cpp  StandaloneOps.cpp  StdxDialect.cpp  StdxOps.cpp  TileConsumerAndFuseProducers.cpp  ToBlockLayoutAndBack.cpp  TppCompiler.cpp  TppConvertToLoop.cpp  TppConvertToVector.cpp  TppConvertToXsmm.cpp  (+8 more)
lib/TPP/: Bufferization.cpp  Bufferize.cpp  BuilderUtils.cpp  CMakeLists.txt  CombineTpp.cpp  ConstantFold.cpp  ConstantFoldPack.cpp  ConvInitSimplify.cpp  ConvertCheckToFunc.cpp  ConvertCheckToLoops.cpp  ConvertForAllToParallelOp.cpp  ConvertLinalgToFunc.cpp  ConvertLinalgToTpp.cpp  ConvertLinalgToXsmm.cpp  ConvertLinalgXToLoops.cpp  ConvertMemRefToTpp.cpp  ConvertMemRefToXsmm.cpp  ConvertPackOptimization.cpp  ConvertPackUnpackOptimization.cpp  ConvertPerfToFunc.cpp  ConvertPerfToLoops.cpp  ConvertTppToIdentity.cpp  ConvertTppToLoops.cpp  ConvertTppToVector.cpp  ConvertTppToXsmm.cpp  ConvertVNNIToTpp.cpp  ConvertXsmmToFunc.cpp  DeallocReturns.cpp  DecomposeAggregatedOps.cpp  DecomposeConvsToMatmulOrBrgemm.cpp  DecomposeLinalgOps.cpp  DecomposeLinalgOpsPass.cpp  DefaultPipeline.cpp  DefaultTppPasses.cpp  ExperimentOnBatchReduceGemm.cpp  GeneralizeTensorPackAndUnPack.cpp  HeapToStack.cpp  InterchangeBlockConvToExposeMatmul.cpp  IteratorCollapsing.cpp  LinalgDeGeneralize.cpp  (+33 more)
runtime/: CMakeLists.txt  PerfRunnerUtils.cpp  PerfRunnerUtils.h  XsmmRunnerUtils.cpp  XsmmRunnerUtils.h
runtime/OneDnnl/: CMakeLists.txt  OneDnnlRunnerUtils.cpp  OneDnnlRunnerUtils.h
runtime/Xsmm/: CMakeLists.txt  XsmmRunnerUtils.cpp  XsmmRunnerUtils.h
standalone-opt/: CMakeLists.txt  standalone-opt.cpp
standalone-rt/: CMakeLists.txt  XsmmRunnerUtils.cpp  XsmmRunnerUtils.h
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/BF16/: brgemm-tpp.mlir  brgemm-vnni.mlir  lit.local.cfg  matmul-bf16.mlir  matmul-pbf16.mlir  matmul-tiled-vnni.mlir  matmul-untiled-vnni.mlir  matmul-vnni.mlir  mlp-all-bf16-tpprun.mlir  mlp-all-bf16.mlir  mlp-all.mlir  mlp-e2e.mlir  mlp-gen-bf16.mlir  mlp-single-layer-bf16.mlir  mlp-single-layer-blocked-bf16.mlir  mlp-single-layer.mlir  tpp-to-loops-invalid.mlir  tpp-to-loops-packed-bf16.mlir  vnni-bufferization.mlir  vnni-ops.mlir  vnni-to-tpp-fail.mlir  vnni-to-tpp.mlir
test/Benchmarks/: matmul_12x6x9.mlir  matmul_48x64x96.mlir  matmul_64x48x96.mlir  matmul_64x64x64.mlir  matmul_kernel_12x6x9.mlir  matmul_kernel_48x64x96.mlir  matmul_kernel_64x48x96.mlir  matmul_kernel_64x64x64.mlir  mlp-bf16-10layers-3584.mlir  mlp-bf16-3layers-1024.mlir  mlp-fp32-1layer-512.mlir  mlp-fp32-3layers-1024.mlir  mlp-vnni-3layers-1536.mlir  mlp.mlir  mlp_kernel.mlir  resnet50_bottleneck.mlir  simple-gemm.mlir  simple_copy.mlir
test/GPU/: all-reduce-max.mlir  gpu-conversion.mlir  gpu-data-transfer.mlir  gpu-flat-args.mlir  gpu-inline-constants.mlir  gpu-pipeline.mlir  gpu-tiling.mlir  gpu-to-cuda.mlir  gpu-to-xegpu.mlir  gpu-vectorize.mlir  gpu-vulkan-abi.mlir  linalg-to-gpu-wmma.mlir  linalg-to-gpu.mlir  linalg-to-xegpu-dpas.mlir  linalg-to-xegpu-stages.mlir  linalg-to-xegpu.mlir  lit.local.cfg  set-spirv-abi-attr.mlir  set-spirv-capabilities.mlir  tpp-to-gpu.mlir
test/Integration/: .smoke.mlir.swp  brgemm-tpp.mlir  brgemm_tpp.mlir  broadcast-2d.mlir  broadcast-row-1d.mlir  broadcast-row.mlir  broadcast-transpose.mlir  conv-mapping-to-gemm.mlir  conv-on-loops.mlir  conv-on-tensor.mlir  conv-to-matmul.mlir  copy.mlir  fused-brgemm.mlir  gemm-loop-tiling-e2e-bf16.mlir  gemm-loop-tiling-e2e.mlir  gemm.mlir  generate-constant-tensor-fill.cpp  hoist-vector-transfer-brgemm.mlir  loop-insertion.mlir  lower-pack-unpack-folding-transpose.mlir  lower-pack-unpack-without-transpose.mlir  matmul-bf16.mlir  matmul-check-example.mlir  matmul-one-shot-buff.mlir  matmul-pbf16.mlir  matmul-tpp-with-print.mlir  matmul-tpp.mlir  matmul_48x64x96.mlir  matmul_64x48x96.mlir  matmul_64x64x64.mlir  matmul_bf16.mlir  matmul_c_driver.c  matmul_kernel.mlir  matmul_one_shot_buff.mlir  matmul_padding.mlir  matmul_tpp.mlir  matmul_tpp_bf16.mlir  matmul_tpp_with_print.mlir  memref.h  mlir-gen-fc.mlir  (+92 more)
test/Models/: mlp-1layer.mlir  mlp-3layers.mlir  mlp.mlir  mobilebert-linalg-stripped.mlir  mobilenet-with-batchnorm.mlir  resnet50v1.mlir  (+7 more)
tpp-rt/: CMakeLists.txt  CheckRunnerUtils.cpp  CheckRunnerUtils.h  PerfRunnerUtils.cpp  PerfRunnerUtils.h  XsmmRunnerUtils.cpp  XsmmRunnerUtils.h
tpp-run/: CMakeLists.txt  MLIRBench.cpp  MLIRBench.h  README.md  tpp-run.cpp
(+1228 files in other folders)
